# CollegeTracker

./: 2  CMakeLists.txt
include/: accountquery.h  class.h  include.h  menus.h
python/: main.py  requirements.txt
src/: accountquery.cpp  main.cpp  menus.cpp
